Add accounts endpoint, auth and healthchecks
